Overflow bug resolved

--- a/src/index.css
+++ b/src/index.css
@@ -1758,6 +1758,7 @@ font-size: 15px;
 font-weight: 600;
 line-height: 21px;
 text-align: center;
+
 text-underline-position: from-font;
 text-decoration-skip-ink: none;
 padding: 10px;
@@ -1766,16 +1767,20 @@ padding: 10px;
   
 
   .Mobile-brand-wrapper {
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
+    
+
   }
 
   .mobile-brand-row {
     display: flex;
     gap: 20px;
     width: 100%;
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: hidden;
     margin-bottom: 20px;
   }
 
